Fix alignment of preview column & make more responsive
Note that we did not optimize for very small devices as the annotation tool
cannot be opened there. However, for tablets it should work fine.

--- a/app/assets/stylesheets/annotations.scss
+++ b/app/assets/stylesheets/annotations.scss
@@ -16,24 +16,71 @@
 
 /* annotation modal */
 #annotation-modal {
-  .modal-content {
+  .modal-body {
+    display: flex;
+  }
+
+  .modal-footer {
+    margin-top: 40px;
+    padding-bottom: 0;
+    padding-right: 0;
+  }
+
+  .annotation-dialog-normal {
+    max-width: 560px;
+  }
+
+  .annotation-dialog-expanded {
+    max-width: 730px;
+  }
+
+  .annotation-content-normal {
     width: 100%;
   }
-  #annotation-modal-content {
-    width: 100%;
+
+  .annotation-content-expanded {
+    width: 70%;
   }
+
+  #annotation-preview-section {
+    width: 30%;
+  }
+
   #annotation-modal-preview {
-    height: 543px;
-    width: 35%;
     word-wrap: break-word;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
+
   #annotation_comment {
-    height: 150px;
-    resize: none;
+    height: 200px;
+    max-height: 300px;
   }
+
   #annotation_category_text {
     width: 200px;
+  }
+
+  // adapted from https://stackoverflow.com/a/49065029/
+  section {
+    display: flex;
+    flex-direction: column;
+    // border: thin solid rgb(176, 176, 176);
+  }
+
+  // this column adapts to the other column with respect to its height
+  .column-adaptable {
+    flex-basis: 0;
+    flex-grow: 1;
+  }
+
+  .annotation-preview {
+    border-right: thin solid rgb(176, 176, 176);
+    margin-right: 8px;
+    padding-right: 8px;
+  }
+
+  .annotation-content-spacing {
+    padding-left: 8px;
   }
 }
 
